Messageboard: skeleton for POST /api/threads/{board}

--- a/information-security/project-messageboard/http/server.cfg.yaml
+++ b/information-security/project-messageboard/http/server.cfg.yaml
@@ -1,6 +1,5 @@
-output:
-  ./../api/server.gen.go
-generate:
-  - chi-server
-  - spec
 package: api
+generate:
+  chi-server: true
+  strict-server: true
+output: ./../api/server.gen.go
